# spbstu_tg_bot

./: Cargo.toml  db.sqlite
migrations/2018-09-05-090852_create_groups/: down.sql  up.sql
src/: main.rs  models.rs  parsing.rs  schema.rs
