[package]
name = "poly-ruzbot"
version = "0.1.0"
authors = ["Vadim Smirnov <smirnovvad7@gmail.com>"]

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio-core = "0.1.17"
futures = "0.1.23"
serde_json = "1.0"
chrono = "0.4"
reqwest = "0.8.8"
diesel = {version = "1.3.2", features = ["sqlite"]}
dotenv = "0.9.0"
