[package]
name = "poly-ruzbot"
version = "0.1.0"
authors = ["Vadim Smirnov <smirnovvad7@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
diesel = {version = "1.4.5", features = ["sqlite"]}
dotenv = "0.9.0"
